@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-19T16:09:36Z",
-  "count_outdated" : 61,
-  "uniques_outdated" : 25,
+  "timestamp" : "2022-09-22T16:10:05Z",
+  "count_outdated" : 64,
+  "uniques_outdated" : 26,
   "count" : 66,
   "uniques" : 28,
   "views" : [
-    {
-      "timestamp": "2022-09-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 1,
