@@ -1,3 +1,11 @@
+2022-09-22T16:10:05Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3107012074
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 25 61 / 28 66
+* notice: next accum: outdated-unq outdated-all / unq all: 26 64 / 28 66
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-08] / []
+
 2022-09-19T16:09:36Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3083917257
 * notice: last 14d: unq all: 3 5
